# haemal-engine

./: CMakeLists.txt
include/: colors.h  draw.h  render.h  sdl_base.h  swap.h  triangle.h  vector.h
src/: draw.c  main.c  render.c  sdl_base.c
